--- a/style.css
+++ b/style.css
@@ -1,23 +1,205 @@
-*{
-    margin: 0;
-    padding:0;
-    box-sizing:border-box;
+@import url("https://fonts.googleapis.com/css2?family=Bellota:ital,wght@0,400;0,700;1,400;1,700&family=Judson:wght@400;700&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body{
-    background-color: #efefef;
-    font-family: 'Times New Roman', Times, serif;
-    background-position: 50% 50%;
-    background-repeat: no-repeat;
-    
+body {
+  background-color: #efefef;
+  font-family: "Times New Roman", Times, serif;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+}
+.container {
+  background-color: #eeecec;
+  margin: 50px 150px;
+  box-shadow: rgb(0, 0, 0) 2px 2px 50px 0px;
+  font-family: "Judson", serif;
+  border-radius: 1.5rem;
+}
+
+.icon-bar {
+  margin-left: 48px;
+  border-bottom: 2px solid #d9d9d9;
+  padding: 10px 50px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.input-box {
+  display: flex;
+  width: 791px;
+
+  justify-content: space-around;
+  align-items: center;
+}
+.input-box img {
+  color: #000000;
+  border-radius: 15px;
+  padding: 5px;
+  margin: 10px;
+  width: 50px;
+  height: 50px;
+  box-shadow: rgb(0, 0, 0) -1px 1px 5px 0px;
+}
+.input-box select {
+  background-color: #d9d9d9;
+  height: 40px;
+  width: 188px;
+  border: none;
+  border-radius: 5px;
+  font-size: 17.6px;
+  font-family: "Bellota", cursive;
+  font-weight: 700;
+  padding: 5px;
+  border: 1px solid #eeecec;
+}
+.search-input {
+  font-family: Judson, serif;
+  color: #000000;
+  width: 300px;
+  height: 40px;
+  display: flex;
+  border-radius: 5px;
+  margin-left: 20px;
+  background-color: #d9d9d9;
+  justify-content: space-between;
+  align-items: center;
+}
+.search-input input {
+  height: 36px;
+  background-color: #d9d9d9;
+  outline: none;
+  border: none;
+  font-size: 13px;
+  color: #000000;
+  padding: 10px;
+  min-height: auto;
+  min-width: auto;
+  cursor: text;
+}
+.search-input img {
+  height: 30px;
+  width: 30px;
+  margin: 16px;
+}
+.firm-info .number {
+  font-family: "Judson", serif;
+  font-size: 19.2px;
+  text-align: right;
+  /* width:121px; */
+  font-weight: 700;
+}
+.firm-info .support {
+  font-family: "Judson", serif;
+  text-align: right;
+  font-size: 12.8px;
+}
+.icons {
+  margin-right: 20px;
+}
+.icons .img1 {
+  width: 60px;
+  height: 60px;
+  padding: 10px;
+}
+.icons .img2 {
+  width: 70px;
+  height: 65px;
+  padding: 10px;
+}
+.icons .img3 {
+  width: 73px;
+  height: 65px;
+  padding: 10px;
+}
+.navigation {
+  margin: 16px 0 0 64px;
+  padding: 10px 50px 10px 50px;
+  display: flex;
+  gap: 3rem;
+  align-items: flex-end;
+}
+.button {
+  font-size: 20.8px;
+  background-color: #d9d9d9;
+  height: 40px;
+  width: 309px;
+  border: 1px solid #a4a4a4a7;
+  padding: 16px;
+  min-height: auto;
+  min-width: auto;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+}
+.button img {
+  width: 23px;
+  height: 21px;
+}
+.button p {
+  font-style: italic;
+  margin-left: 16px;
+}
+.navbar {
+  display: flex;
+  list-style-type: none;
+  gap: 1rem;
+  font-size: 19.2px;
+  margin: 16px 0 0 16px;
+  list-style-position: outside;
+}
+header {
+  background-image: url(./img/stock.jpg);
+  /* background-size: cover; */
+  background-position: 0% 0%;
+  background-repeat: no-repeat;
+  height: 680px;
+  margin: 20px 0 0 0;
+  padding: 32px 80px;
+  display: flex;
+ flex-wrap:wrap;
+  justify-content: center;
+  gap:1rem;
+}
+header .essential {
+  background-color: #d5dee5;
+  width: 800px;
+  height: 300px;
+  display: flex;
+  align-items:center;  
+  border-radius: 5px;
+  box-shadow: 5px 5px 10px black;
+}
+
+.essential-text {
+  padding: 20px;
+  font-size: 32px;
+  font-style: italic;
+  letter-spacing: 0.3px;
+  font-weight: 400;
+}
+.lightning {
+  width: 400px;
+  height: 300px;
+  background-color: #ffc868;
+  margin-left: 3rem;
+  border-radius: 5px;
+  box-shadow: 5px 5px 10px black;
+}
+.lightning p{
+    float:right;
+    /* width:80%; */
+    padding:2rem;
+    direction: rtl;
+    line-height:1.3;
+    font-style:italic;
+    margin-bottom:-200px;
 
 }
-.container{
-    background-color:#eeecec;
-
-    margin:50px 152px 50px 152px ;
-    box-shadow: rgb(0,0,0) 2px 2px 50px 0px;
-    border: 10px solid red;
-    border-radius:1.5rem;
-
+.lightning img {
+  width: 100%;
+  height: 300px;
 }
