--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 }
 .container {
   background-color: #eeecec;
-  width:80%;
+  width: 80%;
 
   margin: 50px auto;
   box-shadow: rgb(0, 0, 0) 2px 2px 50px 0px;
@@ -208,42 +208,40 @@ header .essential {
   background-color: #aea08d;
   padding: 2rem;
 }
-.browse-category{
+.browse-category {
   margin-bottom: 2rem;
   font-size: 1.5rem;
   font-weight: 400;
   /* font-family: 'Josefin Slab', serif; */
 }
 .categories {
- display:flex;
- flex-wrap:wrap;
- justify-content: center;
- align-items:center;    
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
-.part{
-    width:350px;
-    height:350px;
-    background-color: rgba(238,236,236,0.86);
-    box-shadow:2px 2px 50px black;
-    border-radius:10px;
-    margin:1rem;
-    padding:1rem 2px 1rem 1rem;
+.part {
+  width: 350px;
+  height: 350px;
+  background-color: rgba(238, 236, 236, 0.86);
+  box-shadow: 2px 2px 50px black;
+  border-radius: 10px;
+  margin: 1rem;
+  padding: 1rem 2px 1rem 1rem;
 }
-.part p{
-    font-size:1rem;
-    font-family: 'Josefin Slab', serif;
+.part p {
+  font-size: 1rem;
+  font-family: "Josefin Slab", serif;
+}
+.part img {
+  width: 100%;
+  height: 100%;
+  padding: 16px 10px 16px 16px;
+  border-radius: 2rem;
+  border: 10px;
+  position: relative;
+  top: 0;
 
-
-}
-.part img{
-    width:100%;
-    height:100%;
-    padding:16px 10px 16px 16px;
-    border-radius:2rem;
-    border:10px;
-    position:relative;
-    top:0;
-    
-    overflow-clip-margin: content-box;
-    overflow:clip;
+  overflow-clip-margin: content-box;
+  overflow: clip;
 }
